--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -86,7 +86,7 @@
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>3.5.0</version>
         <configuration>
-          <configLocation>google_checks.xml</configLocation>
+          <!-- <configLocation>google_checks.xml</configLocation> -->
           <consoleOutput>true</consoleOutput>
           <failsOnError>true</failsOnError>
           <violationSeverity>warning</violationSeverity>
@@ -173,7 +173,7 @@
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>3.5.0</version>
         <configuration>
-          <configLocation>google_checks.xml</configLocation>
+          <!-- <configLocation>google_checks.xml</configLocation> -->
           <failsOnError>true</failsOnError>
           <violationSeverity>warning</violationSeverity>
         </configuration>
